--- a/data/Game_data/settings.json
+++ b/data/Game_data/settings.json
@@ -1,1 +1,1 @@
-{"Player_name":"Player", "networking":{"port":5555}}
+{"Player_name":"Player", "networking":{"port":5555}, "video_settings":[2,false]}
